[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tabby"
version = "0.1"
keywords = ["tableau", "rally"]
authors = [
  { name="Alexander LaGonterie", email="alagonterie@gmail.com" },
]
description = "Tableau/Rally Integration"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12"
]
dependencies = [
  "tableauhyperapi~=0.0.17971",
  "tableauserverclient~=0.28",
  "pyral~=1.5.2",
  "Flask~=3.0.0",
  "marshmallow~=3.20.1",
  "marshmallow-dataclass~=8.6.0",
  "colorlog~=6.7.0",
  "pyngrok~=7.0.0"
]

[project.scripts]
tabby = "tabby.tabby:main"